feat(store): 添加PgVector存储支持并优化检索功能
- 集成langchain4j-pgvector依赖库
- 实现PgVectorEmbeddingStoreImpl存储组件
- 优化检索结果分数类型从Float到Double的转换
- 重构搜索逻辑以提高匹配精度
- 删除已废弃的chatModelId字段
- 添加noActiveList方法用于非活跃段落查询
- 调整向量存储实现中的排序和去重算法
- 更新系统权限接口实现以优化性能